新增多线程&Cookies支持

--- a/json/config.json
+++ b/json/config.json
@@ -1,6 +1,6 @@
 {
-    "tag":"寄生虫",
-    "page":"1",
+    "tag":"アーミヤ(アークナイツ)",
+    "page":"2",
     "max_pictures_per_post":"2",
     "dest_folder":"Pixiv_Picture"
 }
